RESOLVED FIXED20751
transition property none can assert
https://bugs.webkit.org/show_bug.cgi?id=20751
Summary transition property none can assert
Dean Jackson
Reported 2008-09-09 14:07:42 PDT
A transition property set to none can assert in some situations.
Attachments
Patch plus testcase (4.33 KB, patch)
2008-09-09 14:10 PDT, Dean Jackson
mitz: review+
Dean Jackson
Comment 1 2008-09-09 14:10:01 PDT
Created attachment 23303 [details] Patch plus testcase
Dean Jackson
Comment 2 2008-09-09 16:44:21 PDT
mitz
Comment 3 2008-09-10 19:19:29 PDT
Comment on attachment 23303 [details] Patch plus testcase \ No newline at end of file Please add a newline. r=me
Dean Jackson
Comment 4 2008-09-11 14:59:42 PDT
Committed r36341 M WebCore/ChangeLog M WebCore/page/animation/CompositeAnimation.cpp M LayoutTests/ChangeLog A LayoutTests/transitions/transition-end-event-set-none-expected.txt A LayoutTests/transitions/transition-end-event-set-none.html with newline added
Note You need to log in before you can comment on or make changes to this bug.