2008-09-11  Dean Jackson  <dino@apple.com>

Reviewed by Dan Bernstein.

        Fix assertion on transition property "none"
        https://bugs.webkit.org/show_bug.cgi?id=20751

        Test: transitions/transition-end-event-set-none.html

        * page/animation/CompositeAnimation.cpp:
        (WebCore::CompositeAnimation::updateTransitions):


git-svn-id: svn://svn.chromium.org/blink/trunk@36341 bbb929c8-8fbe-4397-9dbb-9b2b20218538